# py-awesome-kit

./: .gitignore  README.md  requirements.txt  setup.py
awekit/: __init__.py  bee.py  scheduler.yml
awekit/base/: __init__.py  cli_helper.py  devops.py  excel_kit.py  logger_factory.py  port_mapper.py  scheduler.py  security.py
awekit/base/db/: aster.py  database.py  dbapi.py  greenplum.py  oracle.py  sqlserver.py
awekit/base/resources/: config.yml  scheduler-template.yml
awekit/base/util/: account_utils.py  compression.py  database.py  datetimeutils.py  ftpclient.py  greenplum.py  httpclient.py  sqlserver.py  sshclient.py  strings.py
awekit/gui/: ftp_ext_client.py  ftp_ext_server.py
awekit/gui/easy_exam/: client.py
awekit/ml/dataset/: columns_v0.3.csv  feature-set-v0.2.csv  feature-set-v0.3.1.csv  feature-set-v0.3.csv  feature-set.csv
awekit/port_mapping/: port_mapping.py  startup-port-mapping.sh  startup-port-mapping.vbs
awekit/tutorial/flet-apps/flet-app-00/: counter.py
awekit/tutorial/flet-apps/flet-app-01/: README.md  pyproject.toml
awekit/tutorial/ml/: tutorials.ipynb
docs/: shell-learn-note.md
tests/: oop_demo.py  test_ai.py  test_argparse.py  test_common.py  test_http.py  test_mysql.py  test_strings.py
tests/port_mapping/: startup-port-mapping.bat
tests/qt/: pyqt01.py  pyqt01.ui  pyqt01App.py  pyqt02.py  pyqt02.ui  pyqt02App.py  pyqt5_03.py  pyqt5_03.ui  pyqt5_03App.py  t01.py
tests/tk/: tk_basic.py
